feat: add sales volume by center endpoint
